--- a/init.org
+++ b/init.org
@@ -1389,8 +1389,9 @@ I am also using [[https://github.com/tmalsburg/helm-bibtex/blob/master/ivy-bibte
 *** Reftex
 #+begin_src emacs-lisp
   (use-package reftex :straight t
-               :config
-               (setq reftex-default-bibliography "~/Bibliography/math.bib"))
+               :custom
+               (reftex-default-bibliography "~/Bibliography/math.bib")
+               (reftex-ref-style-default-list '("Cleveref" "Default")))
 
   (use-package cdlatex
     :straight t
