--- a/init.org
+++ b/init.org
@@ -489,10 +489,10 @@ More updates and documentation coming soon.
 
 *** Agenda customization
 **** Viewing options
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq org-agenda-window-setup 'current-window)
-  (setq org-deadline-warning-days 3)
-  (setq org-agenda-span 'fortnight)
+  (setq org-deadline-warning-days 7)
+  (setq org-agenda-span 'day)
   (setq org-agenda-skip-scheduled-if-deadline-is-shown t)
   (setq org-agenda-skip-scheduled-if-done t)
   (setq org-agenda-skip-deadline-if-done t)
@@ -501,43 +501,66 @@ More updates and documentation coming soon.
   (setq org-agenda-todo-ignore-scheduled 'all)
   (setq org-agenda-todo-list-sublevels nil)
   (setq org-log-done t)
-  (setq org-pretty-entities t)
+  (setq org-pretty-entities nil)
   (setq org-columns-default-format "%50ITEM(Task) %9TODO %10CLOCKSUM_T(Time today) %10CLOCKSUM(Time total) %10EFFORT(Effort)")
 #+end_src
 
-
 **** Custom agendas
-#+begin_src emacs-lisp
-  (setq org-agenda-custom-commands
-        '(("c" "Comprehensive view"
-           ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
-                        (org-agenda-span 'day)
-                        (org-agenda-ndays 1)
-                        (org-agenda-start-on-weekday nil)
-                        (org-agenda-start-day "+0d")
-                        (org-agenda-todo-ignore-deadlines nil)))
+#+begin_src emacs-lisp :results silent
+                   (setq org-agenda-custom-commands
+                         '(("c" "Comprehensive view"
+                            ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
+                                         (org-agenda-span 'day)
+                                         (org-agenda-ndays 1)
+                                         (org-agenda-start-on-weekday nil)
+                                         (org-agenda-start-day "+0d")
+                                         (org-agenda-todo-ignore-deadlines nil)))
 
-            (todo "ONGOING|WAITING|TODO"
-                  ((org-agenda-overriding-header "Unscheduled tasks:")
-                   (org-agenda-todo-ignore-deadlines 'all)
-                   (org-agenda-todo-ignore-scheduled 'all)))
+                             (todo "ONGOING|WAITING|TODO"
+                                   ((org-agenda-overriding-header "Unscheduled tasks:")
+                                    (org-agenda-todo-ignore-deadlines 'all)
+                                    (org-agenda-todo-ignore-scheduled 'all)))
 
-            (agenda "" ((org-agenda-overriding-header "Upcoming week:")
-                        (org-agenda-span 'week)
-                        (org-agenda-start-day "+1d")
-                        (org-agenda-start-on-weekday nil)
-                        (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled 'todo '("WAITING" "DONE")))
-                        ;;(org-agenda-prefix-format '((agenda . " %-12:c%?-12t %s%b ")))
-                        ))
-            (todo "SHELVED"
-                  ((org-agenda-overriding-header "Shelved tasks:")
-                   (org-agenda-todo-ignore-deadlines 'all)
-                   (org-agenda-todo-ignore-scheduled 'all)))
-            ))))
+                             (agenda "" ((org-agenda-overriding-header "Upcoming week:")
+                                         (org-agenda-span 'week)
+                                         (org-agenda-start-day "+1d")
+                                         (org-agenda-start-on-weekday nil)
+                                         (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled 'todo '("WAITING" "DONE")))
+                                         ;;(org-agenda-prefix-format '((agenda . " %-12:c%?-12t %s%b ")))
+                                         ))
+                             (todo "SHELVED"
+                                   ((org-agenda-overriding-header "Shelved tasks:")
+                                    (org-agenda-todo-ignore-deadlines 'all)
+                                    (org-agenda-todo-ignore-scheduled 'all)))
+                             ))
+                           ("s" "Super agenda"
+                            ((agenda "" ((org-super-agenda-groups
+                                          '((:discard (:tag "personal"))
+                                            (:order-multi (2 (:name "Email" :tag "email")
+                                                             (:name "Red tape" :tag "redtape")))
+                                            (:name "Today"  ; Optionally specify section name
+                                                  :time-grid t  ; Items that appear on the time grid
+                                                  :todo "TODO")
+                                            (:auto-todo t)
+                                            ))))
+                             (agenda "" ((org-agenda-overriding-header "Upcoming week:")
+                                         (org-agenda-span 'week)
+                                         (org-agenda-start-day "+1d")
+                                         (org-agenda-start-on-weekday nil)
+                                         (org-super-agenda-groups nil)))
+                                         
+                             (todo "ONGOING|WAITING|TODO|SHELVED"
+                                   ((org-agenda-overriding-header "Unscheduled tasks:")
+                                    (org-agenda-todo-ignore-deadlines 'all)
+                                    (org-super-agenda-groups
+                                     '((:discard (:tag "personal"))
+                                       (:todo "WAITING")
+                                       (:todo "ONGOING")
+                                       (:todo "TODO")
+                                       (:todo "SHELVED")))))
+                             ))))
+
 #+end_src
-
-#+RESULTS:
-| c | Comprehensive view | ((agenda  ((org-agenda-overriding-header Today's Schedule:) (org-agenda-span 'day) (org-agenda-ndays 1) (org-agenda-start-on-weekday nil) (org-agenda-start-day +0d) (org-agenda-todo-ignore-deadlines nil))) (todo ONGOING | WAITING | TODO ((org-agenda-overriding-header Unscheduled tasks:) (org-agenda-todo-ignore-deadlines 'all) (org-agenda-todo-ignore-scheduled 'all))) (agenda  ((org-agenda-overriding-header Upcoming week:) (org-agenda-span 'week) (org-agenda-start-day +1d) (org-agenda-start-on-weekday nil) (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled 'todo '(WAITING DONE))))) (todo SHELVED ((org-agenda-overriding-header Shelved tasks:) (org-agenda-todo-ignore-deadlines 'all) (org-agenda-todo-ignore-scheduled 'all)))) |
 
 **** Org super agenda
 #+begin_src emacs-lisp
@@ -547,11 +570,13 @@ More updates and documentation coming soon.
     (org-super-agenda-mode))
 #+end_src
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq org-super-agenda-groups
         '((:discard (:category "fun"))
+          (:todo "WAITING")                    
           (:todo "ONGOING")          
           (:todo "TODO")
+          (:todo "SHELVED")
           (:auto-todo t)
           ))
 #+end_src
