--- a/init.org
+++ b/init.org
@@ -344,7 +344,8 @@ I used to use org-pdfview but apparently it is unmaintained. Replace with [[http
   (use-package org-download
     :straight t
     :custom
-    (org-download-screenshot-method "spectacle -b -n -r -o %s")
+    ;;(org-download-screenshot-method "spectacle -b -n -r -o %s")
+    (org-download-screenshot-method "gm import %s")
     (org-download-image-dir "assets/"))
 #+end_src
 ** TODO Org-mode configuration
