Better custom agenda.

--- a/init.org
+++ b/init.org
@@ -502,90 +502,95 @@ More updates and documentation coming soon.
 
 **** Custom agendas
 #+begin_src emacs-lisp :results none
-    (setq org-agenda-custom-commands
-          '(("w" "Work view"
-             ((agenda "" ((org-agenda-span 'day)
-                          (org-super-agenda-groups
-                           '((:discard (:tag "personal"))
-                             (:name "Important"
-                                    :and (:priority "A" :not (:date today))
-                                    :order 2)
-                             (:order-multi (3 (:name "Email" :tag "email")
-                                              (:name "Red tape" :tag "redtape")))
-                             (:name "Today's schedule"
-                                    :time-grid t
-                                    :todo "TODO")
-                             (:auto-planning t)))))
-              (agenda "" ((org-agenda-span 'week)
-                          (org-agenda-start-day "+1d")
-                          (org-agenda-start-on-weekday nil)                        
-                          (org-super-agenda-groups
-                           '((:discard (:tag "personal"))
-                             (:discard (:tag "email"))
-                             (:anything t)))))
-              (todo "ONGOING|WAITING|TODO|SHELVED"
-                    ((org-agenda-overriding-header "Other tasks:")
-                     (org-agenda-todo-ignore-deadlines 'all)
-                     (org-agenda-todo-ignore-scheduled 'all)
-                     (org-super-agenda-groups
-                      '((:discard (:tag "personal"))
-                        (:todo "WAITING")                    
-                        (:todo "ONGOING")
-                        (:todo "TODO")
-                        (:todo "SHELVED")
-                        (:auto-todo t)))))
-              ))
-            ("p" "Personal view"
-             ((agenda "" ((org-agenda-span 'day)
-                          (org-super-agenda-groups
-                           '((:discard (:not (:tag "personal")))
-                             (:order-multi (2 (:name "Email" :tag "email")
-                                              (:name "Red tape" :tag "redtape")))
-                             (:name "Today's schedule"
-                                    :time-grid t
-                                    :todo "TODO")
-                             (:auto-planning t)))))
-              (agenda "" ((org-agenda-span 'week)
+  (setq org-agenda-custom-commands
+        '(("w" "Work view"
+           ((agenda "" ((org-agenda-span 'day)
+                        (org-super-agenda-groups
+                         '((:discard (:tag "personal"))
+                           (:name "Important"
+                                  :and (:priority "A" :not (:date today))
+                                  :order 2)
+                           (:order-multi (3 (:name "Email"
+                                                   :and (:not (:scheduled today) :tag "email"))
+                                            (:name "Red tape"
+                                                   :and (:not (:scheduled today) :tag "redtape"))
+                                            ))
+                           (:name "Today's schedule"
+                                  :time-grid t
+                                  :todo "TODO")
+                           (:auto-planning t)))))
+            (agenda "" ((org-agenda-span 'week)
                         (org-agenda-start-day "+1d")
                         (org-agenda-start-on-weekday nil)                        
                         (org-super-agenda-groups
-                         '((:discard (:not (:tag "personal")))
+                         '((:discard (:tag "personal"))
+                           (:discard (:tag "email"))
                            (:anything t)))))
-              (tags-todo ".*"
+            (todo "ONGOING|WAITING|TODO|SHELVED"
                   ((org-agenda-overriding-header "Other tasks:")
                    (org-agenda-todo-ignore-deadlines 'all)
                    (org-agenda-todo-ignore-scheduled 'all)
                    (org-super-agenda-groups
-                    '((:discard (:not (:tag "personal")))
+                    '((:discard (:tag "personal"))
+                      (:name "Reading list"
+                             :and (:tag "toread" :todo "TODO"))
                       (:todo "WAITING")                    
                       (:todo "ONGOING")
                       (:todo "TODO")
                       (:todo "SHELVED")
-                      (:auto-todo t)))))))
-            ("c" "Comprehensive view"
-             ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
-                          (org-agenda-span 'day)
-                          (org-agenda-ndays 1)
-                          (org-agenda-start-on-weekday nil)
-                          (org-agenda-start-day "+0d")
-                          (org-agenda-todo-ignore-deadlines nil)))
-              (todo "ONGOING|WAITING|TODO"
-                    ((org-agenda-overriding-header "Unscheduled tasks:")
-                     (org-agenda-todo-ignore-deadlines 'all)
-                     (org-agenda-todo-ignore-scheduled 'all)))
+                      (:auto-todo t)))))
+            ))
+          ("p" "Personal view"
+           ((agenda "" ((org-agenda-span 'day)
+                        (org-super-agenda-groups
+                         '((:discard (:not (:tag "personal")))
+                           (:order-multi (2 (:name "Email" :tag "email")
+                                            (:name "Red tape" :tag "redtape")))
+                           (:name "Today's schedule"
+                                  :time-grid t
+                                  :todo "TODO")
+                           (:auto-planning t)))))
+            (agenda "" ((org-agenda-span 'week)
+                      (org-agenda-start-day "+1d")
+                      (org-agenda-start-on-weekday nil)                        
+                      (org-super-agenda-groups
+                       '((:discard (:not (:tag "personal")))
+                         (:anything t)))))
+            (tags-todo ".*"
+                ((org-agenda-overriding-header "Other tasks:")
+                 (org-agenda-todo-ignore-deadlines 'all)
+                 (org-agenda-todo-ignore-scheduled 'all)
+                 (org-super-agenda-groups
+                  '((:discard (:not (:tag "personal")))
+                    (:todo "WAITING")                    
+                    (:todo "ONGOING")
+                    (:todo "TODO")
+                    (:todo "SHELVED")
+                    (:auto-todo t)))))))
+          ("c" "Comprehensive view"
+           ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
+                        (org-agenda-span 'day)
+                        (org-agenda-ndays 1)
+                        (org-agenda-start-on-weekday nil)
+                        (org-agenda-start-day "+0d")
+                        (org-agenda-todo-ignore-deadlines nil)))
+            (todo "ONGOING|WAITING|TODO"
+                  ((org-agenda-overriding-header "Unscheduled tasks:")
+                   (org-agenda-todo-ignore-deadlines 'all)
+                   (org-agenda-todo-ignore-scheduled 'all)))
 
-              (agenda "" ((org-agenda-overriding-header "Upcoming week:")
-                          (org-agenda-span 'week)
-                          (org-agenda-start-day "+1d")
-                          (org-agenda-start-on-weekday nil)
-                          (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled 'todo '("WAITING" "DONE")))
-                          ;;(org-agenda-prefix-format '((agenda . " %-12:c%?-12t %s%b ")))
-                                           ))
-              (todo "SHELVED"
-                    ((org-agenda-overriding-header "Shelved tasks:")
-                     (org-agenda-todo-ignore-deadlines 'all)
-                     (org-agenda-todo-ignore-scheduled 'all)))
-              ))))
+            (agenda "" ((org-agenda-overriding-header "Upcoming week:")
+                        (org-agenda-span 'week)
+                        (org-agenda-start-day "+1d")
+                        (org-agenda-start-on-weekday nil)
+                        (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled 'todo '("WAITING" "DONE")))
+                        ;;(org-agenda-prefix-format '((agenda . " %-12:c%?-12t %s%b ")))
+                                         ))
+            (todo "SHELVED"
+                  ((org-agenda-overriding-header "Shelved tasks:")
+                   (org-agenda-todo-ignore-deadlines 'all)
+                   (org-agenda-todo-ignore-scheduled 'all)))
+            ))))
 #+end_src
 
 **** Org super agenda
